--- a/index.html
+++ b/index.html
@@ -489,13 +489,13 @@
 
             <!-- Right -->
             <div>
-                <a href="" class="text-white me-4">
+                <a href="https://www.facebook.com/profile.php?id=100091622780498" class="text-white me-4">
                     <i class="fab fa-facebook-f"></i>
                 </a>
-                <a href="" class="text-white me-4">
+                <a href="#" class="text-white me-4">
                     <i class="fab fa-twitter"></i>
                 </a>
-                <a href="" class="text-white me-4">
+                <a href="https://mrhosin404.github.io/Portfolio/" class="text-white me-4">
                     <i class="fab fa-google"></i>
                 </a>
                 <a href="" class="text-white me-4">
@@ -504,7 +504,7 @@
                 <a href="" class="text-white me-4">
                     <i class="fab fa-linkedin"></i>
                 </a>
-                <a href="" class="text-white me-4">
+                <a href="https://github.com/MRhosin404/Portfolio" class="text-white me-4">
                     <i class="fab fa-github"></i>
                 </a>
             </div>
@@ -520,7 +520,7 @@
                     <!-- Grid column -->
                     <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
                         <!-- Content -->
-                        <h6 class="text-uppercase fw-bold">Company name</h6>
+                        <h6 class="text-uppercase fw-bold">Lonely coder</h6>
                         <hr class="mb-4 mt-0 d-inline-block mx-auto"
                             style="width: 60px; background-color: #7c4dff; height: 2px" />
                         <p>
@@ -538,10 +538,10 @@
                         <hr class="mb-4 mt-0 d-inline-block mx-auto"
                             style="width: 60px; background-color: #7c4dff; height: 2px" />
                         <p>
-                            <a href="#!" class="text-white">MDBootstrap</a>
+                            <a href="#!" class="text-white">Lonely coder</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-white">MDWordPress</a>
+                            <a href="#!" class="text-white">HTML CSS JS</a>
                         </p>
                         <p>
                             <a href="#!" class="text-white">BrandFlow</a>
@@ -579,10 +579,10 @@
                         <h6 class="text-uppercase fw-bold">Contact</h6>
                         <hr class="mb-4 mt-0 d-inline-block mx-auto"
                             style="width: 60px; background-color: #7c4dff; height: 2px" />
-                        <p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-                        <p><i class="fas fa-envelope mr-3"></i> info@example.com</p>
-                        <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-                        <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+                        <p><i class="fas fa-home mr-3"></i> Dhaka bangladesh</p>
+                        <p><i class="fas fa-envelope mr-3"></i> royeldeloyer20@gamil.com</p>
+                        <p><i class="fas fa-phone mr-3"></i> 01772731991</p>
+                        <p><i class="fas fa-print mr-3"></i> 01883702458</p>
                     </div>
                     <!-- Grid column -->
                 </div>
