--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
                         <hr class="mb-4 mt-0 d-inline-block mx-auto"
                             style="width: 60px; background-color: #7c4dff; height: 2px" />
                         <p>
-                            <a href="#!" class="text-white">Lonely coder</a>
+                            <a href="#!" class="text-white">Your brand</a>
                         </p>
                         <p>
                             <a href="#!" class="text-white">HTML CSS JS</a>
