--- a/index.html
+++ b/index.html
@@ -490,22 +490,22 @@
             <!-- Right -->
             <div>
                 <a href="https://www.facebook.com/profile.php?id=100091622780498" class="text-white me-4">
-                    <i class="fab fa-facebook-f"></i>
+                    <i class="bi bi-facebook"></i>
                 </a>
                 <a href="#" class="text-white me-4">
-                    <i class="fab fa-twitter"></i>
+                    <i class="bi bi-twitter"></i>
                 </a>
                 <a href="https://mrhosin404.github.io/Portfolio/" class="text-white me-4">
-                    <i class="fab fa-google"></i>
+                    <i class="bi bi-google"></i>
                 </a>
                 <a href="" class="text-white me-4">
-                    <i class="fab fa-instagram"></i>
+                    <i class="bi bi-instagram"></i>
                 </a>
                 <a href="" class="text-white me-4">
-                    <i class="fab fa-linkedin"></i>
+                    <i class="bi bi-linkedin"></i>
                 </a>
                 <a href="https://github.com/MRhosin404/Portfolio" class="text-white me-4">
-                    <i class="fab fa-github"></i>
+                    <i class="bi bi-github"></i>
                 </a>
             </div>
             <!-- Right -->
@@ -579,10 +579,10 @@
                         <h6 class="text-uppercase fw-bold">Contact</h6>
                         <hr class="mb-4 mt-0 d-inline-block mx-auto"
                             style="width: 60px; background-color: #7c4dff; height: 2px" />
-                        <p><i class="fas fa-home mr-3"></i> Dhaka bangladesh</p>
-                        <p><i class="fas fa-envelope mr-3"></i> royeldeloyer20@gamil.com</p>
-                        <p><i class="fas fa-phone mr-3"></i> 01772731991</p>
-                        <p><i class="fas fa-print mr-3"></i> 01883702458</p>
+                        <p><i class="bi bi-house-door mr-3"></i> Dhaka bangladesh</p>
+                        <p><i class="bi bi-envelope-at-fill mr-3"></i> royeldeloyer20@gamil.com</p>
+                        <p><i class="bi bi-headset mr-3"></i> 01772731991</p>
+                        <p><i class="bi bi-telephone mr-3"></i> 01883702458</p>
                     </div>
                     <!-- Grid column -->
                 </div>
