--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
                         <hr class="mb-4 mt-0 d-inline-block mx-auto"
                             style="width: 60px; background-color: #7c4dff; height: 2px" />
                         <p><i class="bi bi-house-door mr-3"></i> Dhaka bangladesh</p>
-                        <p><i class="bi bi-envelope-at-fill mr-3"></i> royeldeloyer20@gamil.com</p>
+                        <p><i class="bi bi-envelope-arrow-up mr-3"></i> royeldeloyer20@gamil.com</p>
                         <p><i class="bi bi-headset mr-3"></i> 01772731991</p>
                         <p><i class="bi bi-telephone mr-3"></i> 01883702458</p>
                     </div>
